--- a/pilacoin/src/main/resources/application.properties
+++ b/pilacoin/src/main/resources/application.properties
@@ -11,3 +11,4 @@ queue.errors=clients-errors
 queue.dificuldade=dificuldade
 queue.block.find=descobre-bloco
 queue.bloco.mined=bloco-minerado
+queue.bloco.valided=bloco-validado
