--- a/pilacoin/src/main/resources/application.properties
+++ b/pilacoin/src/main/resources/application.properties
@@ -3,6 +3,11 @@ spring.rabbitmq.port=8082
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+spring.datasource.driver-class-name=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/pilacoin
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
 queue.pilacoin.minerado=pila-minerado
 queue.pilacoin.validado=pila-validado
 queue.user=gabriel_valentim
