--- a/pilacoin-wallet/package.json
+++ b/pilacoin-wallet/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.48.2",
     "sass": "^1.69.5",
     "tailwind-merge": "^2.0.0",
+    "tailwind-variants": "^0.1.18",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
