Começando a receber os pilacoins validados

--- a/pilacoin/src/main/resources/application.properties
+++ b/pilacoin/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.password=1234
 
 queue.pilacoin.minerado=pila-minerado
 queue.pilacoin.validado=pila-validado
+queue.pilacoin.valided.user=Gabriel Valentim-pila-validado
 queue.user=gabriel_valentim
 queue.errors=clients-errors
 queue.dificuldade=dificuldade
