--- a/pilacoin/src/main/resources/application.properties
+++ b/pilacoin/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 spring.datasource.driver-class-name=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/pilacoin
+spring.datasource.url=jdbc:postgresql://postgres_pilacoin:5432/pilacoin
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
