--- a/pilacoin/src/main/resources/application.properties
+++ b/pilacoin/src/main/resources/application.properties
@@ -4,16 +4,16 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 spring.datasource.driver-class-name=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://postgres_pilacoin:5432/pilacoin
+spring.datasource.url=jdbc:postgresql://localhost:5432/pilacoin
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
-queue.pilacoin.minerado=pila-minerado
-queue.pilacoin.validado=pila-validado
-queue.pilacoin.valided.user=Gabriel Valentim-pila-validado
-queue.user=gabriel_valentim
+queue.pilacoin.mined=pila-minerado
+queue.pilacoin.valided=pila-validado
+queue.user=Gabriel Valentim-query
+queue.report=report
 queue.errors=clients-errors
-queue.dificuldade=dificuldade
+queue.difficult=dificuldade
 queue.block.find=descobre-bloco
 queue.bloco.mined=bloco-minerado
 queue.bloco.valided=bloco-validado
