--- a/pilacoin/src/main/resources/application.properties
+++ b/pilacoin/src/main/resources/application.properties
@@ -10,7 +10,9 @@ spring.datasource.password=1234
 
 queue.pilacoin.mined=pila-minerado
 queue.pilacoin.valided=pila-validado
-queue.user=Gabriel Valentim-query
+queue.user=gabriel_valentim
+queue.user.query=Gabriel_Valentim-query
+queue.query=query
 queue.report=report
 queue.errors=clients-errors
 queue.difficult=dificuldade
