Get usuários e início tranfer e update pilacoin

--- a/pilacoin/src/main/resources/application.properties
+++ b/pilacoin/src/main/resources/application.properties
@@ -19,3 +19,4 @@ queue.difficult=dificuldade
 queue.block.find=descobre-bloco
 queue.bloco.mined=bloco-minerado
 queue.bloco.valided=bloco-validado
+queue.transfer=traferir-pila
