--- a/pilacoin/src/main/resources/application.properties
+++ b/pilacoin/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=1234
 queue.pilacoin.mined=pila-minerado
 queue.pilacoin.valided=pila-validado
 queue.user=gabriel_valentim
-queue.user.query=Gabriel_Valentim-query
+queue.user.query=gabriel_valentim-query
 queue.query=query
 queue.report=report
 queue.errors=clients-errors
@@ -19,4 +19,4 @@ queue.difficult=dificuldade
 queue.block.find=descobre-bloco
 queue.bloco.mined=bloco-minerado
 queue.bloco.valided=bloco-validado
-queue.transfer=traferir-pila
+queue.transfer=transferir-pila
