--- a/pilacoin-wallet/package.json
+++ b/pilacoin-wallet/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stomp/stompjs": "^7.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
@@ -21,7 +22,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-use-websocket": "^4.5.0",
     "sass": "^1.69.5",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^2.0.0",
     "tailwind-variants": "^0.1.18",
     "tailwindcss-animate": "^1.0.7",
