--- a/pilacoin-wallet/package.json
+++ b/pilacoin-wallet/package.json
@@ -17,6 +17,7 @@
     "@stomp/stompjs": "^7.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "react": "^18",
@@ -37,6 +38,7 @@
     "@iconify/icons-solar": "^1.2.3",
     "@iconify/react": "^4.1.1",
     "@iconify/tailwind": "^0.1.3",
+    "@types/date-fns": "^2.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
