--- a/pilacoin/src/main/resources/application.properties
+++ b/pilacoin/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.rabbitmq.host=srv-ceesp.proj.ufsm.br
-spring.rabbitmq.port=8082
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.host=
+spring.rabbitmq.port=
+spring.rabbitmq.username=
+spring.rabbitmq.password=
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/pilacoin
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.username=
+spring.datasource.password=
 
 queue.pilacoin.mined=pila-minerado
 queue.pilacoin.valided=pila-validado
